--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-     <link rel="stylesheet" href=".//my.css//style.css">
+     <link rel="stylesheet" href="style.css">
 
 
      <link rel="preconnect" href="https://fonts.googleapis.com">
