--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         
          <!--Work Experience-->
-
+<div>
      <div>
 
        <h3>Work Experience</h3>
@@ -133,7 +133,6 @@
 
      </div>
 
-</div>
 </div>
 
                <!--Sidebar-->
