--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
        <h4>Front-End Developer Freelance</h4>
 
-       <p>September 2019 - up to now   |   Country</p>
+       <p class="mis">September 2019 - up to now   |   Country</p>
 
        <ul>
 
@@ -83,7 +83,7 @@
 
          <h4>Manager Banderogusak & Co.</h4>
 
-<p>March 2015 - October 2018   |   Country</p>
+<p class="mis">March 2015 - October 2018   |   Country</p>
 
      <ul>
 
@@ -103,7 +103,7 @@
 
          <h4>Manager BestUA Corp.</h4>
 
-         <p>June 2014 - February 2015   |   Country</p>
+         <p class="mis">June 2014 - February 2015   |   Country</p>
 
          <ul>
 
@@ -129,7 +129,7 @@
 
          <h5>Management</h5>
 
-         <p>September 2009 - June 2014   |   Country</p>
+         <p class="mis">September 2009 - June 2014   |   Country</p>
 
      </div>
 
