--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <!--Company 1-->
 
-       <h4>Front-End Developer Freelance</h4>
+       <h4>Front-End Developer <span>Freelance</span></h4>
 
        <p class="mis">September 2019 - up to now   |   Country</p>
 
@@ -81,7 +81,7 @@
 
      <div>
 
-         <h4>Manager Banderogusak & Co.</h4>
+         <h4>Manager <span>Banderogusak & Co.</span></h4>
 
 <p class="mis">March 2015 - October 2018   |   Country</p>
 
@@ -101,7 +101,7 @@
 
      <div>
 
-         <h4>Manager BestUA Corp.</h4>
+         <h4>Manager <span>BestUA Corp.</span></h4>
 
          <p class="mis">June 2014 - February 2015   |   Country</p>
 
@@ -125,7 +125,7 @@
 
          <h3>Education</h3>
 
-         <h4>National University of Management</h4>
+         <h4><span>National University of Management</span></h4>
 
          <h5>Management</h5>
 
