--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         
          <!--Work Experience-->
-<div>
+<div class="experience">
      <div>
 
        <h3>Work Experience</h3>
