--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 
                  <!--Contacts-->
 
-             <div>
+             <div class="contac">
 
                  <h3>Contacts</h3>
 
-                 <p>C: <a href="tel:+38888888888">+38 888 888 88 88</a></p>
+                 <p class="tel">C: <a href="tel:+38888888888">+38 888 888 88 88</a></p>
 
                  <p>E: <a href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
 
