--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                  <h3>Contacts</h3>
 
-                 <p>C: <a href class="tel"="tel:+38888888888">+38 888 888 88 88</a></p>
+                 <p>C: <a href class="tel">"tel:+38888888888">+38 888 888 88 88</a></p>
 
                  <p>E: <a href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
 
