--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!--My project -->
 
-        <div>
+        <div class="project">
          <h3>Projects</h3>
          <ol>
 <li class="project-items"><a href="https://hellen.p.goit.global/">https://hellen.p.goit.global/</a>............................[ HTML5, CSS3 ]</li>
