--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
                <!--Sidebar-->
 
-<aside>
+<aside class="Sitbar">
 
                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSE2cOSiPgrxedGh1pjt3EfyI4GQNGgsQvguw&usqp=CAU" alt="My photo" width="300px">
 
