--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                  <!--Contacts-->
 
-             <div class="contac">
+             <div class="contacts-container">
 
                  <h3>Contacts</h3>
 
