--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
              <!-- Tech Skills-->
 
-             <div>
+             <div class="tech-skills-container">
 
                 <h3> Tech Skills</h3>
 
