--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
              <div class="contacts-container">
 
-                 <h3>Contacts</h3>
+                 <h3 class="sidbar-title">Contacts</h3>
 
                  <p>C: <a class="tel" href="tel:+38888888888">+38 888 888 88 88</a></p>
 
@@ -157,7 +157,7 @@
 
              <div class="tech-skills-container">
 
-                <h3> Tech Skills</h3>
+                <h3 class="sidbar-title"> Tech Skills</h3>
 
                 <ul>
 
