--- a/index.html
+++ b/index.html
@@ -147,9 +147,11 @@
 
                  <h3 class="sidbar-title">Contacts</h3>
 
-                 <p>C: <a class="tel" href="tel:+38888888888">+38 888 888 88 88</a></p>
+                 <p> <span class="contacts-type">C:</span>
+                      <a class="tel" href="tel:+38888888888">+38 888 888 88 88</a></p>
 
-                 <p>E: <a href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
+                 <p><span class="contacts-type">E:</span>
+                      <a href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
 
              </div>
 
