--- a/index.html
+++ b/index.html
@@ -147,10 +147,12 @@
 
                  <h3 class="sidbar-title">Contacts</h3>
 
-                 <p> <span class="contacts-type">C:</span>
+                 <p class="contact-item"> 
+                      <span class="contacts-type">C:</span>
                       <a class="tel" href="tel:+38888888888">+38 888 888 88 88</a></p>
 
-                 <p><span class="contacts-type">E:</span>
+                 <p class="contact-item">
+                      <span class="contacts-type">E:</span>
                       <a href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
 
              </div>
