--- a/index.html
+++ b/index.html
@@ -149,11 +149,10 @@
 
                  <p class="contact-item"> 
                       <span class="contacts-type">C:</span>
-                      <a class="tel" href="tel:+38888888888">+38 888 888 88 88</a></p>
-
+                      <a href="tel:+38888888888" class="contacts-numdsr">+38 888 888 88 88</a></p>
                  <p class="contact-item">
                       <span class="contacts-type">E:</span>
-                      <a href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
+                      <a href="mailto:t.goitinskiy@gmail.com"class="contact-email">t.goitinskiy@gmail.com</a></p>
 
              </div>
 
