--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
                 <h3 class="sidbar-title"> Tech Skills</h3>
 
-                <ul>
+                <ul class="skils-list">
 
                 <li>HTML5</li>
 
