--- a/index.html
+++ b/index.html
@@ -164,19 +164,19 @@
 
                 <ul class="skils-list">
 
-                <li>HTML5</li>
+                <li class="skills-list-item">HTML5</li>
 
-                <li>CSS3</li>
+                <li class="skills-list-item">CSS3</li>
 
-                <li>GIT</li>
+                <li class="skills-list-item">GIT</li>
 
-                <li>WebPack</li>
+                <li class="skills-list-item">WebPack</li>
 
-                <li>JavaScript</li>
+                <li class="skills-list-item">JavaScript</li>
 
-                <li>React.js</li>
+                <li class="skills-list-item">React.js</li>
 
-                <li>Node.js</li>
+                <li class="class="skills-list-item">Node.js</li>
 
                 </ul>
 
