--- a/index.html
+++ b/index.html
@@ -160,23 +160,23 @@
 
              <div class="tech-skills-container">
 
-                <h3 class="sidbar-title"> Tech Skills</h3>
+                <h3 class="sidbar-title"><Tech Skills</h3>
 
                 <ul class="skils-list">
 
-                <li class="skills-list-item">HTML5</li>
+                <li class="skills-list-item"><span class="skills-list-text">HTML5</span></li>
 
-                <li class="skills-list-item">CSS3</li>
+                <li class="skills-list-item"><span class="skills-list-text">CSS3</span></li>
 
-                <li class="skills-list-item">GIT</li>
+                <li class="skills-list-item"><span class="skills-list-text">GIT</span></li>
 
-                <li class="skills-list-item">WebPack</li>
+                <li class="skills-list-item"><span class="skills-list-text">WebPack</span></li>
 
-                <li class="skills-list-item">JavaScript</li>
+                <li class="skills-list-item"><span class="skills-list-text">JavaScript</span></li>
 
-                <li class="skills-list-item">React.js</li>
+                <li class="skills-list-item"><span class="skills-list-text">React.js</span></li>
 
-                <li class="class="skills-list-item">Node.js</li>
+                <li class="class="skills-list-item"><span class="skills-list-text">Node.js</span></li>
 
                 </ul>
 
