--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
                  <p class="contact-item"> 
                       <span class="contacts-type">C:</span>
-                      <a href="tel:+38888888888" class="contacts-numdsr">+38 888 888 88 88</a></p>
+                      <a href="tel:+38888888888" class="contacts-number">+38 888 888 88 88</a></p>
                  <p class="contact-item">
                       <span class="contacts-type">E:</span>
                       <a href="mailto:t.goitinskiy@gmail.com"class="contact-email">t.goitinskiy@gmail.com</a></p>
