--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                 <li class="skills-list-item"><span class="skills-list-text">React.js</span></li>
 
-                <li class="class="skills-list-item"><span class="skills-list-text">Node.js</span></li>
+                <li class="skills-list-item"><span class="skills-list-text">Node.js</span></li>
 
                 </ul>
 
