--- a/index.html
+++ b/index.html
@@ -184,20 +184,20 @@
 
              <!--Soft skils-->
 
-             <div>
+             <div class="soft-skills-container">
 
-                <h3>Soft Skills</h3>
+                <h3 class="sidbar-title">Soft Skills</h3>
 
-                <ul>
+                <ul class="skils-list">
 
-                <li>Scrum</li>
+                <li class="skills-title"><span class="skills-list-text">Scrum</span></li>
 
-                <li>Agile</li>
+                <li class="skills-title"><span class="skills-list-text">Agile</span></li>
 
-                <li>GTD</li>
+                <li class="skills-title"><span class="skills-list-text">GTD</span></li>
 
-                <li>Teamwork</li>
-
+                <li class="skills-title"><span class="skills-list-text">Teamwork</span></li>
+                     
                 </ul>
 
              </div>
