--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
              <div class="tech-skills-container">
 
-                <h3 class="sidbar-title"><Tech Skills</h3>
+                <h3 class="sidbar-title">Tech Skills</h3>
 
                 <ul class="skils-list">
 
