--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
 
                 <ul class="skils-list">
 
-                <li class="skills-title"><span class="skills-list-text">Scrum</span></li>
+                <li class="skills-list-item"><span class="skills-list-text">Scrum</span></li>
 
-                <li class="skills-title"><span class="skills-list-text">Agile</span></li>
+                <li class="skills-list-item"><span class="skills-list-text">Agile</span></li>
 
-                <li class="skills-title"><span class="skills-list-text">GTD</span></li>
+                <li class="skills-list-item"><span class="skills-list-text">GTD</span></li>
 
-                <li class="skills-title"><span class="skills-list-text">Teamwork</span></li>
+                <li class="skills-list-item"><span class="skills-list-text">Teamwork</span></li>
                      
                 </ul>
 
