--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
        <div>
         <h2 class="my-profession">Front-End Developed</h2>
-        <h1>Taras Goitinskiy</h1>
+        <h1 class="my-name">Taras Goitinskiy</h1>
         <p class="lorem-ipsem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
         </div>
 
