--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!--My project -->
 
         <div class="project">
-         <h3>Projects</h3>
+         <h3 class="main-content-title">Projects</h3>
          <ol>
 <li class="project-items"><a href="https://hellen.p.goit.global/">https://hellen.p.goit.global/</a>............................[ HTML5, CSS3 ]</li>
 <li><a href="https://cryptohub.p.goit.global/">https://cryptohub.p.goit.global/</a>.....................[ JavaScript ]</li>
