--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="experience">
      <div>
 
-       <h3>Work Experience</h3>
+       <h3 class="main-content-title">Work Experience</h3>
 
         <!--Company 1-->
 
