--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <h3 class="main-content-title">Projects</h3>
          <ol>
 <li class="project-items"><a href="https://hellen.p.goit.global/">https://hellen.p.goit.global/</a>............................[ HTML5, CSS3 ]</li>
-<li><a href="https://cryptohub.p.goit.global/">https://cryptohub.p.goit.global/</a>.....................[ JavaScript ]</li>
+<li class="project-items"><a href="https://cryptohub.p.goit.global/">https://cryptohub.p.goit.global/</a>.....................[ JavaScript ]</li>
 <li class="project-items"><a href="https://kidslike.p.goit.global/">https://kidslike.p.goit.global/</a>.........................[ React.js, Node.js ]</li>
          </ol>
         </div>
