--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!--My project -->
 
-        <div class="project">
+        <div class="projects-conteiner">
          <h3 class="main-content-title">Projects</h3>
          <ol class="project-list">
 <li class="project-items"><a href="https://hellen.p.goit.global/">https://hellen.p.goit.global/</a>............................[ HTML5, CSS3 ]</li>
