--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
         <div class="projects-conteiner">
          <h3 class="main-content-title">Projects</h3>
          <ol class="project-list">
-<li class="project-items"><a href="https://hellen.p.goit.global/">https://hellen.p.goit.global/</a><span class="project-item-descr">............................[ HTML5, CSS3 ]</span></span></li>
-<li class="project-items"><a href="https://cryptohub.p.goit.global/">https://cryptohub.p.goit.global/</a><span class="project-item-descr">.....................[ JavaScript ]</span></li>
-<li class="project-items"><a href="https://kidslike.p.goit.global/">https://kidslike.p.goit.global/</a><span class="project-item-descr">..........................[ React.js, Node.js ]</span></li>
+<li class="project-items">
+     <a href="https://hellen.p.goit.global/" class="project-item-link">https://hellen.p.goit.global/</a><span class="project-item-descr">............................[ HTML5, CSS3 ]</span></span></li>
+<li class="project-items">
+     <a href="https://cryptohub.p.goit.global/" class="project-item-link">https://cryptohub.p.goit.global/</a><span class="project-item-descr">.....................[ JavaScript ]</span></li>
+<li class="project-items">
+     <a href="https://kidslike.p.goit.global/" class="project-item-link">https://kidslike.p.goit.global/</a><span class="project-item-descr">..........................[ React.js, Node.js ]</span></li>
          </ol>
         </div>
         
