--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!--Company 1-->
       <div>
             
-       <h4>Front-End Developer <span>Freelance</span></h4>
+       <h4 class="work-ecxperience-position">Front-End Developer <span>Freelance</span></h4>
 
        <p class="mis">September 2019 - up to now   |   Country</p>
 
