--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        <h3 class="main-content-title">Work Experience</h3>
 
         <!--Company 1-->
-      <div>
+      <div class="work-ecxperience-place">
             
        <h4 class="work-ecxperience-position">Front-End Developer <span>Freelance</span></h4>
 
@@ -83,7 +83,7 @@
 
      <!--Company 2-->
 
-     <div>
+     <div class="work-ecxperience-place">
 
          <h4>Manager <span>Banderogusak & Co.</span></h4>
 
@@ -103,7 +103,7 @@
 
      <!--Company 3-->
 
-     <div>
+     <div class="work-ecxperience-place">
 
          <h4>Manager <span>BestUA Corp.</span></h4>
 
