--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!--Company 1-->
       <div class="work-ecxperience-place">
             
-       <h4 class="work-ecxperience-position">Front-End Developer <span>Freelance</span></h4>
+       <h4 class="work-ecxperience-position">Front-End Developer <span class="work-ecxperience-company">Freelance</span></h4>
 
        <p class="mis">September 2019 - up to now   |   Country</p>
 
@@ -85,7 +85,7 @@
 
      <div class="work-ecxperience-place">
 
-         <h4>Manager <span>Banderogusak & Co.</span></h4>
+         <h4>Manager <span class="work-ecxperience-company">Banderogusak & Co.</span></h4>
 
 <p class="mis">March 2015 - October 2018   |   Country</p>
 
@@ -105,7 +105,7 @@
 
      <div class="work-ecxperience-place">
 
-         <h4>Manager <span>BestUA Corp.</span></h4>
+         <h4>Manager <span class="work-ecxperience-company">BestUA Corp.</span></h4>
 
          <p class="mis">June 2014 - February 2015   |   Country</p>
 
