--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             
        <h4 class="work-ecxperience-position">Front-End Developer <span class="work-ecxperience-company">Freelance</span></h4>
 
-       <p class="mis">September 2019 - up to now   |   Country</p>
+       <p class="work-period">September 2019 - up to now   |   Country</p>
 
        <ul>
 
@@ -87,7 +87,7 @@
 
          <h4>Manager <span class="work-ecxperience-company">Banderogusak & Co.</span></h4>
 
-<p class="mis">March 2015 - October 2018   |   Country</p>
+<p class="work-period">March 2015 - October 2018   |   Country</p>
 
      <ul>
 
@@ -107,7 +107,7 @@
 
          <h4>Manager <span class="work-ecxperience-company">BestUA Corp.</span></h4>
 
-         <p class="mis">June 2014 - February 2015   |   Country</p>
+         <p class="work-period">June 2014 - February 2015   |   Country</p>
 
          <ul>
 
