--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 
        <ul>
 
-       <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+       <li class="work-duties">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
 
-       <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+       <li class="work-duties">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
 
-       <li>Risus commodo viverra maecenas.</li>
+       <li class="work-duties">Risus commodo viverra maecenas.</li>
 
-       <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li>
+       <li class="work-duties">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li>
 
       </ul>
 
@@ -91,11 +91,11 @@
 
      <ul>
 
-     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
+     <li class="work-duties">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
 
-     <li>Quis ipsum suspendisse ultrices gravida.</li>
+     <li class="work-duties">Quis ipsum suspendisse ultrices gravida.</li>
 
-     <li>Risus commodo viverra maecenas.</li>
+     <li class="work-duties">Risus commodo viverra maecenas.</li>
 
      </ul>
 
@@ -111,11 +111,11 @@
 
          <ul>
 
-<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+<li class="work-duties">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
 
-<li>Quis ipsum suspendisse ultrices gravida.</li>
+<li class="work-duties">Quis ipsum suspendisse ultrices gravida.</li>
 
-<li>Risus commodo viverra maecenas.</li>
+<li class="work-duties">Risus commodo viverra maecenas.</li>
 
          </ul>
 
