--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
        <p class="work-period">September 2019 - up to now   |   Country</p>
 
-       <ul>
+       <ul class="work-duties-list">
 
        <li class="work-duties">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
 
@@ -89,7 +89,7 @@
 
 <p class="work-period">March 2015 - October 2018   |   Country</p>
 
-     <ul>
+     <ul class="work-duties-list">
 
      <li class="work-duties">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
 
@@ -109,7 +109,7 @@
 
          <p class="work-period">June 2014 - February 2015   |   Country</p>
 
-         <ul>
+         <ul class="work-duties-list">>
 
 <li class="work-duties">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
 
