--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
          <p class="work-period">June 2014 - February 2015   |   Country</p>
 
-         <ul class="work-duties-list">>
+         <ul class="work-duties-list">
 
 <li class="work-duties">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
 
