--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
      <div class="work-ecxperience-place">
 
-         <h4>Manager <span class="work-ecxperience-company">Banderogusak & Co.</span></h4>
+         <h4 class="work-ecxperience-position">Manager <span class="work-ecxperience-company">Banderogusak & Co.</span></h4>
 
 <p class="work-period">March 2015 - October 2018   |   Country</p>
 
@@ -105,7 +105,7 @@
 
      <div class="work-ecxperience-place">
 
-         <h4>Manager <span class="work-ecxperience-company">BestUA Corp.</span></h4>
+         <h4 class="work-ecxperience-position">Manager <span class="work-ecxperience-company">BestUA Corp.</span></h4>
 
          <p class="work-period">June 2014 - February 2015   |   Country</p>
 
@@ -127,13 +127,13 @@
 
      <div>
 
-         <h3>Education</h3>
+         <h3 class="main-content-title">Education</h3>
 
-         <h4><span>National University of Management</span></h4>
+         <h4 class="work-ecxperience-position"><span class="work-ecxperience-company">National University of Management</span></h4>
 
          <h5>Management</h5>
 
-         <p class="mis">September 2009 - June 2014   |   Country</p>
+         <p class="work-period">September 2009 - June 2014   |   Country</p>
 
      </div>
 
