--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
          <h4 class="work-ecxperience-position"><span class="work-ecxperience-company">National University of Management</span></h4>
 
-         <h5>Management</h5>
+         <h5 class="management">Management</h5>
 
          <p class="work-period">September 2009 - June 2014   |   Country</p>
 
