--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <h3 class="main-content-title">Projects</h3>
          <ol class="project-list">
 <li class="project-items">
-     <a href="https://hellen.p.goit.global/" class="project-item-link">https://hellen.p.goit.global/</a><span class="project-item-descr">.............................[ HTML5, CSS3 ]</span></span></li>
+     <a href="https://hellen.p.goit.global/" class="project-item-link">https://hellen.p.goit.global/</a><span class="project-item-descr">............................[ HTML5, CSS3 ]</span></span></li>
 <li class="project-items">
      <a href="https://cryptohub.p.goit.global/" class="project-item-link">https://cryptohub.p.goit.global/</a><span class="project-item-descr">....................[ JavaScript ]</span></li>
 <li class="project-items">
